--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./resources/css/reset.css">
   <link rel="stylesheet" href="./resources/css/style.css">
   <meta charset="UTF-8">
@@ -18,6 +21,7 @@
           <li><a href="#">Product detail</a></li>
           <li><a href="#">About us</a></li>
           <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="./resources/images/instagram.png"></a></li>
+          <li class="tablet"><a href="#">Join us</a></li>
         </ul>
       </nav>
       <nav class="mobile">
@@ -100,7 +104,7 @@
       </div>
     </div>
 
-    <!-- Quotes Section
+    <!-- Quotes Section -->
     <div id="quotes-section">
       <div class="content center">
         <span class="quote">“It’s truly something that could create a brand new photography Renaissance”</span>
